--- a/public/styles.css
+++ b/public/styles.css
@@ -9,3 +9,10 @@ h1 {
 h2 {
     font-size: 1.6em;
 }
+p {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+        
+}
