--- a/public/styles.css
+++ b/public/styles.css
@@ -4,14 +4,22 @@ body {
     font-size: 18px;
 }
 h1 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 60px;
+    padding-right: 60px;
     font-size: 2em;
 }
 h2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 60px;
+    padding-right: 60px;
     font-size: 1.6em;
 }
 p {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 60px;
     padding-right: 60px;
         
