--- a/public/styles.css
+++ b/public/styles.css
@@ -21,6 +21,24 @@ p {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 60px;
-    padding-right: 60px;
-        
+    padding-right: 60px;     
 }
+ol {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 60px;
+    padding-right: 60px;
+}
+ ul {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 60px;
+    padding-right: 60px;
+ }
+
+ img {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 60px;
+    padding-right: 60px;
+ }
