--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@ body {
     color: #414141; /* Dark gray */
     background-color: #EEEEEE; /* Light gray */
     font-size: 18px;
+    box-sizing: border-box; 
 }
 h1 {
     padding-top: 10px;
@@ -10,7 +11,24 @@ h1 {
     padding-right: 100px;
     font-size: 2em;
     border: 10px solid #5D6063;
+    box-sizing: border-box; 
+    /* margin: 20px auto;
+    width: 200px; */
 }
+
+.big-title {
+    font-size: 50px;
+}
+
+.page strong {
+    color: rgb(207, 30, 39)
+}
+
+.page {
+    width: 600px;
+    margin: 0 auto;
+}
+
 h2 {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -26,6 +44,7 @@ p {
     padding-left: 100px;
     padding-right: 100px;    
     margin-bottom: 30px; 
+    box-sizing: border-box; 
 }
 ol {
     padding-top: 10px;
@@ -33,6 +52,7 @@ ol {
     padding-left: 120px;
     padding-right: 100px;
     margin-bottom: 10px;
+    box-sizing: border-box; 
 }
  ul {
     padding-top: 10px;
@@ -40,6 +60,7 @@ ol {
     padding-left: 120px;
     padding-right: 100px;
     margin-bottom: 10px;
+    box-sizing: border-box; 
  }
 
  img {
@@ -47,6 +68,7 @@ ol {
     padding-bottom: 10px;
     padding-left: 100px;
     padding-right: 100px;
+    box-sizing: border-box; 
  }
  * {
     margin: 0;
