--- a/public/styles.css
+++ b/public/styles.css
@@ -90,6 +90,7 @@ a:hover {
     color: #fff;
     background-color: rgb(238, 153, 153);  /* Blue */
     padding: 20px 0;
+    flex-direction: column;
 }
   
 .navigate {
