--- a/public/styles.css
+++ b/public/styles.css
@@ -90,7 +90,7 @@ a:hover {
     color: #fff;
     background-color: rgb(238, 153, 153);  /* Blue */
     padding: 20px 0;
-    flex-direction: column;
+    flex-direction: row;
 }
   
 .navigate {
@@ -98,5 +98,5 @@ a:hover {
     width: 300px;
     display: flex;
     justify-content: flex-start;
-    flex-direction: column;
+    flex-direction: row;
 }
