--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,16 @@
         width: 100%;
         
     }
+    .header {
+        width: 960px;
+        height: 350px;
+    }
+    .header {
+        background-image: no-repeat url('images/headerback.jpg');
+        height: 70%;
+        width: 100%;
+        display:block;
+    }
     .page {
         width: 960px;
         margin: 0 auto;
@@ -35,7 +45,6 @@
         padding-left: 100px;
         padding-right: 100px;
         font-size: 2em;
-        border: 10px solid #5D6063;
         box-sizing: border-box; 
     }
     .big-title {
@@ -48,18 +57,17 @@
         width: 1000px;
         margin: 0 auto;
     }
-    h2 {
-        padding-top: 10px;
-        padding-bottom: 10px;
+    h2, h3 {
+        /* padding-top: 10px;
+        padding-bottom: 10px; */
         padding-left: 100px;
         padding-right: 100px;
-        font-size: 1.6em;
-        border: 5px solid #5D6063;
-
+         margin: 0 auto;
+        /* font-size: 1em; */
     }
     p {
-        padding-top: 10px;
-        padding-bottom: 10px;
+        /* padding-top: 10px;
+        padding-bottom: 10px; */
         padding-left: 100px;
         padding-right: 100px;    
         margin-bottom: 30px; 
@@ -81,21 +89,14 @@
         margin-bottom: 10px;
         box-sizing: border-box; 
     }
-
-    img {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 60px;
-        padding-right: 60px;
-        box-sizing: border-box; 
-    }
+    
     * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
     }
     a:hover {
-        color: green;
+        color: purple;
         text-decoration: underline;
     }
 
@@ -106,9 +107,10 @@
         display: flex;
         justify-content: space-around;
         color: #fff;
-        background-color: rgb(238, 153, 153);  /* Blue */
-        padding: 20px 0;
+        background-color: #EEEEEE; /* Light gray */;  
+        padding: 10px 0;
         flex-direction: row;
+        height: 80px;
     } 
     .navigate {
         border: 1px solid #fff;  /* For debugging */
