--- a/public/styles.css
+++ b/public/styles.css
@@ -28,7 +28,13 @@
     }
     /* Mobile Styles */
     @media only screen and (max-width: 400px) {
-        .body { width: 100% }
+        .body { 
+            width: 100%; 
+            color: #414141; /* Dark gray */
+            background-color: #EEEEEE; /* Light gray */
+            font-size: 19px;
+            box-sizing: border-box;
+        }
         .page {
             width: 100%;
             height: 300px;
