some mobile stuff here

--- a/public/styles.css
+++ b/public/styles.css
@@ -28,10 +28,10 @@
     }
     /* Mobile Styles */
     @media only screen and (max-width: 400px) {
-        .body { 
-            width: 100%; 
+        body { 
+            width: 100%;
             color: #414141; /* Dark gray */
-            background-color: rgb(204, 53, 53); /* Light gray */
+            background-color: #EEEEEE; /* Light gray */
             font-size: 19px;
             box-sizing: border-box;
         }
