--- a/src/styles.css
+++ b/src/styles.css
@@ -5,175 +5,176 @@
     background-color: aliceblue;
     color: #414141; /* Dark gray */
     font-family: 'Raleway', sans-serif;
-    /* text-rendering: optimizeLegibility;
-    font-feature-settings: "kern"; */
-    /* letter-spacing: 0.10em; */
+}
+
+body {
+    color: #414141; /* Dark gray */
+    background-color: rgb(165, 163, 163); 
+    font-size: 18px;
+    box-sizing: border-box; 
+    font-family: 'Raleway', sans-serif;
+    text-rendering: optimizeLegibility;
+    font-feature-settings: "kern";
+    letter-spacing: 0.10em;
+    width: 100%;
+}
+.header {
+    width: 960px;
+    height: 350px;
+}
+.header {
+    background-image: no-repeat url('images/headerback.jpg');
+    height: 70%;
+    width: 100%;
+    display:block;
+}
+.page {
+    width: 960px;
+    margin: 0 auto;
+}
+/* Mobile Styles */
+
+    /* body { 
+        width: 100%;
+        color: #414141; 
+        background-color: #EEEEEE; 
+        font-size: 19px;
+        box-sizing: border-box;
+    } 
+    .page {
+        width: 100%;
+        height: 300px;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    p {
+        text-indent: 50px;
+    } */
+
+h1 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 100px;
+    padding-right: 100px;
+    font-size: 2em;
+    box-sizing: border-box; 
+}
+.big-title {
+    font-size: 25px;
+}
+.page {
+    width: 1000px;
+    margin: 0 auto;
+}
+h2, h3 {
+    padding-left: 100px;
+    padding-right: 100px;
+    margin: 0 auto;
+}
+p {
+    text-indent: 50px;
+    padding-left: 100px;
+    padding-right: 100px;    
+    margin-bottom: 30px; 
+    box-sizing: border-box; 
+}
+ol {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 120px;
+    padding-right: 100px;
+    margin-bottom: 10px;
+    box-sizing: border-box; 
+}
+ul {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 120px;
+    padding-right: 100px;
+    margin-bottom: 10px;
+    box-sizing: border-box; 
+}
+
+a:hover {
+    color: purple;
+    text-decoration: none;
+}
+
+.floater {
+    float: right;
+}
+    .navigate-container {
+    display: flex;
+    justify-content: space-around;
+} 
+
+
+.gallery__master {
+    list-style: none;
+    font-size: 0.75em;
+    display: flex;
+    overflow-x: auto;
+    height: 20vh;
+}
+
+.gallery__thumb {
+    height: 20vh;
+    margin-right: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.gallery__thumb.selected .gallery__thumb-img-wrap {
+    border: 2px solid #333;
+}
+
+.gallery__thumb:hover {
+    cursor: pointer;
+}
+
+.gallery__thumb-img-wrap {
+    display: block;
+    border: 2px solid black;
+    width: 19vh;
+    height: 19vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.gallery__thumb-img {
+    max-width: 19vh;
+    max-height: 19vh;
+    vertical-align: middle;
+text-align: center;
+}
+
+.gallery__detail-img-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 78vh;
+}
+
+.gallery__detail-img {
+    margin-top: 2vh;
+    max-height: 78vh;
+    max-width: 98vw;
+}
+.gallery__caption {
+    text-align: center;
+}
+.gallery__thumb.selected .gallery__thumb-img-wrap {
+    background: #C60C30;
 }
 
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {
     body {
-        color: #414141; /* Dark gray */
-        background-color: rgb(165, 163, 163); 
-        font-size: 18px;
-        box-sizing: border-box; 
-        font-family: 'Raleway', sans-serif;
-        text-rendering: optimizeLegibility;
-        font-feature-settings: "kern";
-        letter-spacing: 0.10em;
-        width: 100%;
-    }
-    .header {
-        width: 960px;
-        height: 350px;
-    }
-    .header {
-        background-image: no-repeat url('images/headerback.jpg');
-        height: 70%;
-        width: 100%;
-        display:block;
-    }
-    .page {
-        width: 960px;
-        margin: 0 auto;
-    }
-    /* Mobile Styles */
-    @media only screen and (max-width: 400px) {
-        body { 
-            width: 100%;
-            color: #414141; 
-            background-color: #EEEEEE; 
-            font-size: 19px;
-            box-sizing: border-box;
-        } 
-        .page {
-            width: 100%;
-            height: 300px;
-            flex-wrap: wrap;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        p {
-            text-indent: 50px;
-        }
-    }
-    h1 {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 100px;
-        padding-right: 100px;
-        font-size: 2em;
-        box-sizing: border-box; 
-    }
-    .big-title {
-        font-size: 25px;
-    }
-    .page {
-        width: 1000px;
-        margin: 0 auto;
-    }
-    h2, h3 {
-        padding-left: 100px;
-        padding-right: 100px;
-        margin: 0 auto;
-    }
-    p {
-        text-indent: 50px;
-        padding-left: 100px;
-        padding-right: 100px;    
-        margin-bottom: 30px; 
-        box-sizing: border-box; 
-    }
-    ol {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 120px;
-        padding-right: 100px;
-        margin-bottom: 10px;
-        box-sizing: border-box; 
-    }
-    ul {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 120px;
-        padding-right: 100px;
-        margin-bottom: 10px;
-        box-sizing: border-box; 
-    }
-
-    a:hover {
-        color: purple;
-        text-decoration: none;
-    }
-
-    .floater {
-        float: right;
-    }
-     .navigate-container {
-        display: flex;
-        justify-content: space-around;
-    } 
-
-    
-    .gallery__master {
-        list-style: none;
-        font-size: 0.75em;
-        display: flex;
-        overflow-x: auto;
-        height: 20vh;
-    }
-    
-    .gallery__thumb {
-        height: 20vh;
-        margin-right: 1em;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .gallery__thumb.selected .gallery__thumb-img-wrap {
-        border: 2px solid #333;
-    }
-    
-    .gallery__thumb:hover {
-        cursor: pointer;
-    }
-    
-    .gallery__thumb-img-wrap {
-        display: block;
-        border: 2px solid black;
-        width: 19vh;
-        height: 19vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    
-    .gallery__thumb-img {
-        max-width: 19vh;
-        max-height: 19vh;
-        vertical-align: middle;
-        text-align: center;
-    }
-    
-    .gallery__detail-img-wrap {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 78vh;
-    }
-    
-    .gallery__detail-img {
-        margin-top: 2vh;
-        max-height: 78vh;
-        max-width: 98vw;
-    }
-    .gallery__caption {
-        text-align: center;
-    }
-    .gallery__thumb.selected .gallery__thumb-img-wrap {
-        background: #C60C30;
+      background-color: #B2D6FF; /* Blue */
     }
 }
