--- a/server/views/layouts/default.hbs
+++ b/server/views/layouts/default.hbs
@@ -1,5 +1,33 @@
-<html>
+<!DOCTYPE html>
+<html lang='en'>
+    <head>
+        <!-- Metadata goes here -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+        <title>{{title}}</title>
+        <meta charset='UTF-8'/>
+        <meta name='viewport'
+            content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+        <link rel='stylesheet' href='styles.css'/>
+    </head>
+
     <body>
-        {{{ body }}}
+        <div class='page'>
+                <div class='header'>
+                       
+                        <div class='navigate-container'>
+                            <!-- <img class='head-img' src='images/headerback.jpg' width='100%'/> -->
+                            <h1 class="home"><a href="index">Blog Posts</a></h1>
+                            <div class="navigate-bar">
+                                <h2 class="navigater"><a href="bucket-list">Bucket List</a></h2>
+                                <h2 class="navigater"><a href="about-me">About Me</a></h2> 
+                                <h2 class="navigater"><a href="gallery">Photos</a></h2>
+                            </div>
+                        </div>
+                        <img class='head-img' src='./headerback.jpg' width='100%'/>
+                </div> <!--close header-->
+                {{{ body }}}
+            
+        </div> <!-- closes whole page-->
+        <script src="./main.ts"></script>
     </body>
 </html>
