--- a/server/views/layouts/default.hbs
+++ b/server/views/layouts/default.hbs
@@ -22,7 +22,7 @@
                                 <h2 class="navigater"><a href="gallery">Photos</a></h2>
                             </div>
                         </div>
-                        <img class='head-img' src='headerback.jpg' width='100%'/>
+                        <img class='head-img' src='./static/headerback.jpg' width='100%'/>
                 </div> <!--close header-->
                 {{{ body }}}
             
