--- a/server/views/layouts/default.hbs
+++ b/server/views/layouts/default.hbs
@@ -27,6 +27,6 @@
                 {{{ body }}}
             
         </div> <!-- closes whole page-->
-        <script src="./main.ts"></script>
+        {{!-- <script src="./main.ts"></script> --}}
     </body>
 </html>
