--- a/server/views/layouts/default.hbs
+++ b/server/views/layouts/default.hbs
@@ -15,8 +15,9 @@
                 <div class='header'>
                        
                         <div class='navigate-container'>
-                            <h1 class="home"><a href="index">Blog Posts</a></h1>
+                            
                             <div class="navigate-bar">
+                                <h1 class="navigater"><a href="index">Blog Posts</a></h1>
                                 <h2 class="navigater"><a href="bucket-list">Bucket List</a></h2>
                                 <h2 class="navigater"><a href="about-me">About Me</a></h2> 
                                 <h2 class="navigater"><a href="gallery">Photos</a></h2>
