better responsive design

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,8 +1,8 @@
 <div class='content'> 
-            <div class='content-title'><h1>Blog Posts</h1></div>
+            <h1>Blog Posts</h1>
             <br/>
             <div class='post'>
-                <div class='post-title'><h3>The week before my Maymester in Copenhagen</h3><p>May 14, 2019</p></div>
+                <div class='post-title'><h3>The week before my Maymester in Copenhagen</h3><h4>May 14, 2019</h4></div>
                 <br/>
                 <p>I am currently sitting in the Heathrow airport in London writing this blog post. 
                     These readings have taken a suprisingly long time to complete as 
@@ -38,7 +38,7 @@
             <br/>
         
             <div class="post">
-                <div class='post-title'><h3>Arrival Day</h3><p>May 21, 2019</p></div>
+                <div class='post-title'><h3>Arrival Day</h3><h4>May 21, 2019</h4></div>
                 <br/>
                 <p>I have spent 3 days and 3 nights in Copenhagen and I am exhausted so far. This place is a Copenheaven for sure.
                     I got really lucky with 2 days of nearly 70 degrees and sunny perfect weather. I was here with my 2 bffs and they left for
