--- a/client/styles.css
+++ b/client/styles.css
@@ -44,8 +44,8 @@ body {
 h1 {
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
     font-size: 1.8em;
     box-sizing: border-box; 
 }
@@ -54,8 +54,8 @@ h1 {
 }
 
 h2, h3, h4 {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
     margin: 0 auto;
 }
 
@@ -64,25 +64,23 @@ a {
 }
 
 p {
-    text-indent: 50px;
-    padding-left: 50px;
-    padding-right: 50px;    
+    text-indent: 30px;
+    padding-left: 30px;
+    padding-right: 30px;    
     margin-bottom: 30px; 
     box-sizing: border-box; 
 }
 ol {
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 70px;
-    
+    padding-left: 50px;
     margin-bottom: 10px;
     box-sizing: border-box; 
 }
 ul {
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 70px;
-    
+    padding-left: 50px;
     margin-bottom: 10px;
     box-sizing: border-box; 
 }
@@ -94,6 +92,8 @@ a:hover {
 
 .floater {
     float: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .navigater {
