--- a/client/styles.css
+++ b/client/styles.css
@@ -192,7 +192,11 @@ a:hover {
         width: 1000px;
     }
     h1 {
-        font-size: 2.2em;
+        font-size: 2em;
+    }
+    
+    .bucket {
+        font-size:2.2em;
     }
     .navigate-container {    
         width: 100%;
