--- a/server/views/bucket-list.hbs
+++ b/server/views/bucket-list.hbs
@@ -1,5 +1,6 @@
 
-<h1>Lyd's Bucket List</h1>
+<h1 class='bucket'>Lyd's Bucket List</h1>
+<br/>
 {{!-- <h2>10 things I wish to do during my Maymester in Europe:</h2> --}}
         <ol>
             {{#each todos }}
