--- a/server/views/gallery.hbs
+++ b/server/views/gallery.hbs
@@ -1,4 +1,6 @@
-<div id='galleryContainer'>
+<div class='content'> 
+    <div id='galleryContainer'>
 
+    </div>
 </div>
 <script src="./gallery.js"></script>
