--- a/server/views/bucket-list.hbs
+++ b/server/views/bucket-list.hbs
@@ -1,14 +1,15 @@
+<div class='content'> 
+    <h1 class='bucket'>Lyd's Bucket List</h1>
+    <br/>
+    {{!-- <h2>10 things I wish to do during my Maymester in Europe:</h2> --}}
+            <ol>
+                {{#each todos }}
 
-<h1 class='bucket'>Lyd's Bucket List</h1>
-<br/>
-{{!-- <h2>10 things I wish to do during my Maymester in Europe:</h2> --}}
-        <ol>
-            {{#each todos }}
-
-                {{#if url}} 
-                    <li><a href="{{url}}">{{description}}</a></li>
-                {{else}} 
-                    <li>{{description}}</li>
-                {{/if}}
-            {{/each}}
-        </ol>
+                    {{#if url}} 
+                        <li><a href="{{url}}">{{description}}</a></li>
+                    {{else}} 
+                        <li>{{description}}</li>
+                    {{/if}}
+                {{/each}}
+            </ol>
+</div>
