better responsive design

--- a/client/styles.css
+++ b/client/styles.css
@@ -195,17 +195,19 @@ a:hover {
     }
     h1 {
         font-size: 2em;
+        padding-right: 50px;
+        padding-left: 50px;
     }
 
     h2, h3, h4, p, ul, ol {
         padding-right: 50px;
         padding-left: 50px;
-        padding-top: 50px;
-        padding-bottom: 50px;
     }
 
     .bucket {
         font-size:2.2em;
+        padding-right: 50px;
+        padding-left: 50px;
     }
     .navigate-container {    
         width: 100%;
