--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -2,8 +2,8 @@
             <h1>Blog Posts</h1>
             <br/>
             {{#each posts }}
-                {{ title }}
-                {{ publishAt }}
+                <h3>{{ title }}</h3>
+                <h4>{{ publishAt }} </h4>
                 {{{ body }}}
             {{/each}}
             {{!-- <div class='post-title'><h3>The week before my Maymester in Copenhagen</h3><h4>May 14, 2019</h4></div>
